--- a/Public/styles/tictail-like.css
+++ b/Public/styles/tictail-like.css
@@ -84,21 +84,35 @@ input {
 
 .job {
     opacity: 0.3;
-    width:100%;
+    width: 100%;
     display: inline-block;
     padding-left: 30px;
     margin-top: 10px;
     border-left: 10px solid;
 }
-.job-action{
-    display:none;
+
+.job-action {
+    display: none;
 }
-.job h3:hover .job-action{
-    display:inline-block;
+
+.job h3:hover .job-action {
+    display: inline-block;
 }
 
 .job.unordered {
     opacity: 1;
+}
+
+button {
+    background-color: #FCC100;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    color: #FFF;
+}
+
+button:hover {
+    background-color: #000;
 }
 /*
 .job.running {
