--- a/Public/views/job-detail.html
+++ b/Public/views/job-detail.html
@@ -1,7 +1,13 @@
 <div class='container'>
     <div class="job {{current_job.state}}">
         <h3>{{current_job.title}}</h3>
-        <h4>{{current_job.id}}</h4>
+        <h4>{{current_job.id}} / {{current_job.state}}</h4>
+        
         <p>{{current_job.instructions}}</p>
+        <div ng-if="current_job.state == 'unordered'">
+           <button ng-click="launchJob()">Start this job on CrowdFlower with units relaunching (extra expenses may occur)</button>
+        </div>
+        <h4><a href="https://make.crowdflower.com/jobs/{{current_job.id}}" target="_blank">View this job on CrowdFlower</a></h4>
+        
     </div>
 </div>
