--- a/Web/views/job-detail.html
+++ b/Web/views/job-detail.html
@@ -4,10 +4,10 @@
         <h4>{{current_job.id}} / {{current_job.state}}</h4>
         
         <p>{{current_job.instructions}}</p>
-        <div ng-if="current_job.state == 'unordered'">
-           <button ng-click="launchJob()">Start this job on CrowdFlower with units relaunching (extra expenses may occur)</button>
+        <div>
+           <button ng-click="launchJob()">Enable relaunching for this job</button>
+           <br/><small>Please make sure the job is running. Extra costs may occur.</small>
         </div>
         <h4><a href="https://make.crowdflower.com/jobs/{{current_job.id}}" target="_blank">View this job on CrowdFlower</a></h4>
-        
     </div>
 </div>
